[package]
name = "image_charts"
version = "6.1.32"
edition = "2021"
rust-version = "1.85"
authors = ["Francois-Guillaume Ribreau <github@fgribreau.com>"]
description = "Official Image-Charts.com API client library"
documentation = "https://docs.rs/image_charts"
homepage = "https://www.image-charts.com/"
repository = "https://github.com/image-charts/rust"
license = "MIT"
keywords = ["front-end","backend-end","chart","charts","chart-url"]
categories = ["api-bindings", "visualization", "web-programming"]
readme = "README.md"

[features]
default = ["async"]
async = ["reqwest/default-tls", "dep:tokio"]
blocking = ["reqwest/blocking", "reqwest/default-tls"]
full = ["async", "blocking"]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json"] }
tokio = { version = "1", features = ["fs"], optional = true }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
urlencoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "generate_chart_url"
path = "examples/generate_chart_url.rs"

[[example]]
name = "download_chart_as_buffer"
path = "examples/download_chart_as_buffer.rs"
required-features = ["async"]

[[example]]
name = "download_chart_as_image"
path = "examples/download_chart_as_image.rs"
required-features = ["async"]

[[example]]
name = "download_chart_as_data_uri"
path = "examples/download_chart_as_data_uri.rs"
required-features = ["async"]

[[example]]
name = "enterprise_sign_chart"
path = "examples/enterprise_sign_chart.rs"
